--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
 /vendor/
+# Ignorar el contenido config
+assets/js/config.js
 
 # IDE Files
 #-------------------------
