--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ application/config/database.php
 
 assets/js/config.js
 admin/app/config.js
-admin/app/components
+/admin/app/components/
+
+/bower_components/
 
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
