--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,12 @@ application/config/config.php
 assets/js/config.js
 admin/app/config.js
 /admin/app/components/
-# /admin/app/components/jsons/*
-# /admin/app/components/modules/*
-# /admin/app/components/templates/*
-# /admin/app/components/partials/customize/*
-# /admin/app/components/partials/rightbar/*
+/admin/app/components/jsons/*
+/admin/app/components/modules/*
+/admin/app/components/templates/*
+/admin/app/components/partials/customize/*
+/admin/app/components/partials/rightbar/*
+/admin/assets/images/*
 
 
 /bower_components/
