--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ application/config/config.php
 
 assets/js/config.js
 admin/app/config.js
-/admin/app/components/
+/admin/app/components/*
 /admin/app/components/jsons/*
 /admin/app/components/modules/*
 /admin/app/components/templates/*
