--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ application/logs/*
 application/config/database.php
 application/config/config.php
 application/config/email.php
+application/third_party/*
 
 assets/js/config.js
 admin/app/config.js
